tests/paczka1/small_fuzzy/98161591.err
Error in line 1: hxpLzKW S601 99,1
Error in line 13: hxpLzKW S111 84,3
Error in line 12: k7Gbx S601 64,7
